# BYBE

./: .replit  README.md  design_guidelines.md  index.html  package-lock.json  package.json  replit.md  rust-install-guide.md  tauri-migration-plan.md  vite.config.ts
.npm/: store.json
attached_assets/: Pasted--Bybe-Professional-Specification-Updated-1-Bybe-IDE--1763683708689_1763683708690.txt
client/src/: App.tsx  index.css
client/src/components/: AIChat.tsx  AISettings.tsx  BottomPanel.tsx  CenterPanel.tsx  CodeEditor.tsx  FileTree.tsx  LeftSidebar.tsx  MainContent.tsx  ResizablePanel.tsx  RightSidebar.tsx  Tabs.tsx  Terminal.tsx  TerminalTab.tsx  TopBar.tsx
client/src/components/examples/: AIChat.tsx  (+4 more)
client/src/lib/: TerminalSocket.ts  aiStreaming.ts  api.ts  store.ts
client/src/pages/: IDEPage.tsx
old-server/: .env  index.ts  schema.ts  storage.ts
old-server/providers/: groq.ts  openai.ts  registry.ts  together.ts  types.ts
old-server/routes/: secrets.ts
old-server/services/: modelSync.ts  rateLimiter.ts  websocket.ts
server/: db.ts  routes.ts
server/providers/: anthropic.ts  ollama.ts  openrouter.ts  types.ts
server/routes/: providers.ts
server/services/: cache.ts  logger.ts  providerSettings.ts  secrets.ts  websocket.ts
shared/: schema.ts
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: CodeEditor.tsx  FileTree.tsx  Preview.tsx  ThemeToggle.tsx  TopBar.tsx
src/lib/: TerminalSocket.ts  aiConfig.ts  api.ts  providers.ts  rateLimiter.ts  store.ts
src/pages/: IDEPage.tsx
